--- a/SecretSanta/src/SecretSanta.Web/Views/Gifts/Index.cshtml
+++ b/SecretSanta/src/SecretSanta.Web/Views/Gifts/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<Gift>
 
+
 <p>
     <a asp-action="Create">Create New</a>
 </p>
@@ -23,8 +24,7 @@
                 <td asp-display-for="@item.Url"></td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
         }
