--- a/SecretSanta/src/SecretSanta.Web/Views/Shared/_Layout_Template.cshtml
+++ b/SecretSanta/src/SecretSanta.Web/Views/Shared/_Layout_Template.cshtml
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <!-- Stylesheets -->
-
-    <link href="~/css/main.35dca7196a869cf813d7.css" rel="stylesheet" />
-
+    <% for (var filename in htmlWebpackPlugin.files.css) { %>
+    <link href="~<%= htmlWebpackPlugin.files.css[filename] %>" rel="stylesheet" />
+    <% } %>
     <!-- End Stylesheets -->
     <style>
         input.input-validation-error {
@@ -31,9 +31,9 @@
         @RenderBody()
     </div>
     <!-- Scripts -->
-
-    <script src="~/js/main.35dca7196a869cf813d7.js"></script>
-
+    <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
+    <script src="~<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
+    <% } %>
     <!-- End Scripts -->
     @RenderSection("scripts", required: false)
 </body>
